@@ -27,6 +27,7 @@ CHANGES IN CUPS V2.0.2
 	- Mapping of PPD keywords to IPP keywords did not work if the PPD
 	  keyword was already an IPP keyword (<rdar://problem/19121005>)
 	- cupsGetPPD* sent bad requests (STR #4567)
+	- ippserver used the wrong temporary directory on Windows (STR #4547)
 
 
 CHANGES IN CUPS V2.0.1
